fix(component/ButtonCircle): Align Icons to bottom

--- a/src/app/components/elements/ButtonCircle/ButtonCircle.styles.sass
+++ b/src/app/components/elements/ButtonCircle/ButtonCircle.styles.sass
@@ -23,7 +23,7 @@ $iconcircle-circlesize: 1.8em
         @extend %Transition-Out
         font-size: inherit
         display: table-cell
-        vertical-align: middle
+        vertical-align: bottom
         color: theme(dark, text-secondary)
         text-align: center
         z-index: 1
